[tool.poetry]
name = "activitywatch"
version = "0.12.0"
description = "The free and open-source automated time tracker. Cross-platform, extensible, privacy-focused."
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"

[tool.poetry.dependencies]
python = "^3.8,<3.11"
# Installing them from here won't work
#aw-core = {path = "aw-core"}
#aw-client = {path = "aw-client"}
#aw-watcher-afk = {path = "aw-watcher-afk"}
#aw-watcher-window = {path = "aw-watcher-window"}
#aw-server = {path = "aw-server"}
#aw-qt = {path = "aw-qt"}

[tool.poetry.dev-dependencies]
mypy = "*"
pytest = "^7.0"
pytest-cov = "*"
pytest-benchmark = "*"
pyinstaller = "^5.2"
#pyinstaller = {git = "https://github.com/pyinstaller/pyinstaller.git", branch="develop"}
psutil = "*"
pywin32-ctypes = {version = "*", platform = "win32"}
pefile = {version = "*", platform = "win32"}

# Won't be respected due to https://github.com/python-poetry/poetry/issues/1584
#setuptools = ">49.1.1"  # needed due to https://github.com/pypa/setuptools/issues/1963

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
