[tool.poetry]
name = "activitywatch"
version = "0.14.0"
description = "The free and open-source automated time tracker. Cross-platform, extensible, privacy-focused."
authors = ["Erik Bjäreholt <erik@bjareho.lt>", "Johan Bjäreholt <johan@bjareho.lt>"]
license = "MPL-2.0"
# This is an aggregator project (deps only, no `activitywatch` package to build).
# Poetry 2.x defaults to package-mode and would fail with "No file/folder found
# for package activitywatch"; disable it so `poetry install` only manages deps.
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
# Installing them from here won't work
#aw-core = {path = "aw-core"}
#aw-client = {path = "aw-client"}
#aw-watcher-afk = {path = "aw-watcher-afk"}
#aw-watcher-window = {path = "aw-watcher-window"}
#aw-server = {path = "aw-server"}
#aw-qt = {path = "aw-qt"}

[tool.poetry.group.dev.dependencies]
mypy = "*"
pytest = "*"
pytest-cov = "*"
pytest-benchmark = "*"
psutil = "*"
pywin32-ctypes = {version = "*", platform = "win32"}
pefile = {version = "*", platform = "win32"}

pyinstaller = {version = "*", python = "^3.9,<3.14"}
# releases are very infrequent, so good idea to use the master branch
# we need this unreleased commit: https://github.com/pyinstaller/pyinstaller-hooks-contrib/commit/0f40dc6e74086e5472aee75070b9077b4c17ab18
pyinstaller-hooks-contrib = {git = "https://github.com/pyinstaller/pyinstaller-hooks-contrib.git", branch="master"}

# PyInstaller still imports pkg_resources, which setuptools removed in 81+.
setuptools = ">=78.1.1,<81"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
